--- a/styles/components/Header.module.css
+++ b/styles/components/Header.module.css
@@ -1,20 +1,27 @@
 .headerContainer {
-  width: 75%;
-  max-width: 755.35px;
-  gap: 10px;
+  /* width: 75%; */
+  /* max-width: 755.35px; */
+  max-width: 100%;
+  gap: 14.4rem;
   display: flex;
-  align-items: flex-start;
+  align-items: inherit;
   text-align: justify;
   height: 0px auto;
 }
 
+.headerContainer > span {
+  display: flex;
+  gap: 10px;
+  align-items: inherit;
+}
+
 .imageContainer {
-  margin-top: 10px;
+  /* margin-top: 10px; */
   width: 100%;
-  height: 15.0rem;
-  width: 15.0rem;
-  min-height: 15.0rem;
-  min-width: 15.0rem
+  height: 13.0rem;
+  width: 13.0rem;
+  min-height: 13.0rem;
+  min-width: 13.0rem
 }
 
 .imageContainer > div {
@@ -48,12 +55,39 @@
   color: #5F6368;
 }
 
+.mobileLink {
+  display: none
+}
+
+.desktopLink {
+  display: flex;
+  align-self: end;
+}
+
 @media (max-width: 890px) {
   .imageContainer {
     height: 16.8rem;
     width: 16.8rem;
     min-height: 16.8rem;
     min-width: 16.8rem;
+  }
+
+  /* .headerContainer {
+    height: 16.8rem;
+    width: 16.8rem;
+    min-height: 16.8rem;
+    min-width: 16.8rem;
+    max-width: 82%;
+    flex-direction: column;
+    gap: 1rem
+  } */
+
+  .mobileLink {
+    display: flex
+  }
+
+  .desktopLink {
+    display: none
   }
 }
 
@@ -68,8 +102,12 @@
 
 @media (max-width: 765px) {
   .headerContainer {
-    width: 71%;
+    width: 97%;
     align-items: center;
+    flex-direction: column;
+  }
+
+  .headerContainer > span {
     flex-direction: column;
   }
 
@@ -85,9 +123,3 @@
   }
 
 }
-
-/* @media (max-width: 418px) {
-  .headerContainer {
-    width: 34%;
-  }
-} */
