--- a/styles/components/Header.module.css
+++ b/styles/components/Header.module.css
@@ -25,13 +25,6 @@
   position: unset !important;
 }
 
-.image {
-
-  width: 100% !important;
-  position: relative !important;
-  height: unset !important
-}
-
 .profile {
   width: auto;
   height: 0px auto;
@@ -59,6 +52,33 @@
 .desktopLink {
   display: flex;
   align-self: end;
+}
+
+@media (max-width: 1091px) {
+  .imageContainer {
+    height: 14.5rem;
+    width: 14.5rem;
+    min-height: 14.5rem;
+    min-width: 14.5rem;
+  }
+}
+
+@media (max-width: 1091px) {
+  .imageContainer {
+    height: 16.5rem;
+    width: 16.5rem;
+    min-height: 16.5rem;
+    min-width: 16.5rem;
+  }
+}
+
+@media (max-width: 908px) {
+  .imageContainer {
+    height: 18.5rem;
+    width: 18.5rem;
+    min-height: 18.5rem;
+    min-width: 18.5rem;
+  }
 }
 
 @media (max-width: 890px) {
